kubernetes/apps/networking/adguard-home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: adguard.evans-lab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-home
            port:
              number: 80
